addtodo form inline
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3348 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/projman/templates/addtodo.html
+++ b/projman/templates/addtodo.html
@@ -1,10 +1,7 @@
-{% extends "base.html" %}
-
-{% block title %}Add Todo - {{ block.super }}{% endblock %}
-
-{% block content %}
-<form action="{% url pm_addtodo %}" method="POST">
-	{{ form.as_p }}
-	<input type="submit" value="Submit">
+<form autocomplete="off">
+	<input type="hidden" name="category" value="">
+	<input type="hidden" name="priority" value="">
+	{{ todo_form.item.errors }}
+	{{ todo_form.item }}
+	<input type="button" value="Add">
 </form>
-{% endblock %}
