added authentication, added sidebar
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3357 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/projman/templates/addcategory.html
+++ b/projman/templates/addcategory.html
@@ -1,10 +1,7 @@
-{% extends "base.html" %}
-
-{% block title %}Add Category - {{ block.super }}{% endblock %}
-
-{% block content %}
-<form action="{% url pm_addcategory %}" method="POST">
-	{{ form.as_p }}
-	<input type="submit" value="Submit">
+<form autocomplete="off">
+	{{ category_form.project.errors }}
+	{{ category_form.name.errors }}
+	{{ category_form.project }}
+	{{ category_form.name }}
+	<input type="button" value="Add">
 </form>
-{% endblock %}
