--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,9 @@
 <body>
 	<div id="header" style="margin-bottom: 10px;">
 		<a href="/">Home</a> - 
-		<a href="/pm/overview">Overview</a>
+		<a href="/login">Login</a> - 
+		<a href="/register">Register</a> - 
+		<a href="/pm/overview/">Overview</a>
 	</div>
 	<div id="content">
 		{% block content %}{% endblock %}
