--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,13 @@
 <body>
 	<div id="header" style="margin-bottom: 10px;">
 		<a href="/">Home</a> - 
-		<a href="/login">Login</a> - 
-		<a href="/register">Register</a> - 
+		{% if request.user.is_authenticated %}
+		<a href="/logout">Logout</a> - 
 		<a href="/pm/overview/">Overview</a>
+		{% else %}
+		<a href="/login">Login</a> - 
+		<a href="/register">Register</a>
+		{% endif %}
 	</div>
 	<div id="content">
 		{% block content %}{% endblock %}
