updated forms, added accounts concept
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3359 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/projman/templates/addproject.html
+++ b/projman/templates/addproject.html
@@ -1,5 +1,6 @@
 <form autocomplete="off">
-	{{ project_form.name.errors }}
+	{{ project_form.errors }}
+	{{ project_form.account }}
 	{{ project_form.name }}
 	<input type="button" value="Add">
 </form>
