--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,10 @@
 		<a href="/">Home</a> - 
 		{% if request.user.is_authenticated %}
 		<a href="/logout">Logout</a> - 
-		<a href="/pm/overview/">Overview</a>
+		<a href="/pm/overview">Overview</a>
 		{% else %}
 		<a href="/login">Login</a> - 
-		<a href="/register">Register</a>
+		<a href="/pm/create">Create</a>
 		{% endif %}
 	</div>
 	<div id="content">
