updated style and js
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3360 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/site_media/css/default.css
+++ b/site_media/css/default.css
@@ -107,10 +107,21 @@ a:hover {
 	left: 14px;
 }
 
+.todos .icons {
+	float: left;
+	padding-top: 1px;
+	padding-right: 2px;
+}
+
+.todos .complete {
+	float: left;
+	padding-right: 4px;
+}
+
 .todos .item {
-	position: relative;
+	/*position: relative;
 	top: -18px;
-	left: 45px;
+	left: 45px;*/
 }
 
 #overviewContainer {
