added descriptions, updated js bugs, updated css
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3362 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/projman/templates/addcategory.html
+++ b/projman/templates/addcategory.html
@@ -1,7 +1,5 @@
 <form autocomplete="off">
-	{{ category_form.project.errors }}
-	{{ category_form.name.errors }}
 	{{ category_form.project }}
 	{{ category_form.name }}
-	<input type="button" value="Add">
+	<input type="button" value="Add"/>
 </form>
