--- a/projman/templates/addtodo.html
+++ b/projman/templates/addtodo.html
@@ -1,7 +1,6 @@
 <form autocomplete="off" onkeypress="return entFunc(event, addTodo, this);">
-	<input type="hidden" name="category" value="">
-	<input type="hidden" name="priority" value="">
-	{{ todo_form.item.errors }}
-	{{ todo_form.item }}
-	<input type="button" value="Add">
+	<input type="hidden" name="category" value=""/>
+	<input type="hidden" name="priority" value=""/>
+	<input type="text" name="{{ todo_form.item.name }}" style="width: 720px;"/>
+	<input type="button" value="Add"/>
 </form>
