--- a/projman/templates/overview.html
+++ b/projman/templates/overview.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 	{% for account in accounts %}
-		<h1><a href="">X</a> <a href="{% url pm_view account.id %}">{{ account.name }}</a></h1>
+		<h1><a href=""><img src="/site_media/images/trash.gif"/></a> <a href="{% url pm_view account.id %}">{{ account.name }}</a></h1>
+		<div class="accountDescription">{{ account.description }}</div>
 	{% endfor %}
 {% endblock %}
