added in place editing, fixed some logic bugs
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3363 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/projman/templates/view.html
+++ b/projman/templates/view.html
@@ -9,7 +9,7 @@
 		<td valign="top">
 			<div id="projects">
 				{% for project in projects %}
-					<div id="project{{ project.id }}" class="project">
+					<div id="project{{ project.id }}" rel="{{ project.id }}" class="project">
 						<h1><a href="{% url pm_delproject project.id %}">X</a> {{ project.name }}</h1>
 						<div class="projectDescription">{{ project.description }}</div>
 						<div class="categories">
