--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 	<title>{% block title %}pm{% endblock %}</title>
 	<script type="text/javascript" language="javascript" src="/site_media/js/jquery.min.js"></script>
 	<script type="text/javascript" language="javascript" src="/site_media/js/jquery-ui.min.js"></script>
+	<script type="text/javascript" language="javascript" src="/site_media/js/jquery.editable.js"></script>
 	<script type="text/javascript" language="javascript" src="/site_media/js/default.js"></script>
 	<link rel="stylesheet" type="text/css" href="/site_media/css/default.css">
 </head>
