--- a/projman/templates/show_todos.html
+++ b/projman/templates/show_todos.html
@@ -12,7 +12,7 @@
 			</div>
 		</div>
 		<div class="item">
-			{{ todo.item }} <span class="created">({{ todo.created }})</span>
+			{{ todo.item }} <span class="created">({{ todo.created|date:"Y-m-d g:ia" }})</span>
 		</div>
 	</li>
 {% endfor %}
