added 'remember me' and fixed category forms
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3366 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -1,5 +1,6 @@
 Login:
 <form method="POST" action="{% url login %}">
 	{{ login_form.as_p }}
+	<input type="checkbox" name="remember" value="1"/> Remember Me<br/>
 	<input type="submit" value="Login">
 </form>
