--- a/projman/templates/addcategory.html
+++ b/projman/templates/addcategory.html
@@ -1,9 +1,9 @@
 <form autocomplete="off">
-	<select name="{{ category_form.project.name }}" style="width: 75px;">
+	<label for="category">Category:</label> <select name="{{ category_form.project.name }}" style="width: 221px;">
 	{% for choice_val, choice_label in category_form.project.field.choices %}
 		<option value="{{ choice_val }}">{{ choice_label }}</option>
 	{% endfor %}
-	</select>
-	<input type="text" name="{{ category_form.name.name }}" style="width: 150px;"/>
-	<input type="button" value="Add"/>
+	</select><br/>
+	<label for="name">Name:</label> <input type="text" name="{{ category_form.name.name }}" style="width: 234px;"/><br/>
+	<label for="description">Description:</label> <input type="text" name="{{ category_form.description.name }}" style="width: 173px;"/><input type="button" value="Add"/>
 </form>
