added animations and bug fixes, added esc to close
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3367 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/projman/templates/addtodo.html
+++ b/projman/templates/addtodo.html
@@ -1,4 +1,4 @@
-<form autocomplete="off" onkeypress="return entFunc(event, addTodo, this);">
+<form autocomplete="off" onkeypress="return onKeyPress_addTodo(event, this);">
 	<input type="hidden" name="category" value=""/>
 	<input type="hidden" name="priority" value=""/>
 	<input type="text" name="{{ todo_form.item.name }}" style="width: 720px;"/>
