added basecamp import, updated templates and style, added quick links
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3375 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/apps/projman/templates/show_todos.html
+++ b/apps/projman/templates/show_todos.html
@@ -14,7 +14,7 @@
 				</div>
 			</div>
 			<div class="item">{{ todo.item }}</div>
-			<div class="created">({{ todo.created|date:"Y-m-d g:ia" }})</div>
+			<div class="created">({% if todo.complete %}{{ todo.completed|date:"Y-m-d g:ia" }}{% else %}{{ todo.created|date:"Y-m-d g:ia" }}{% endif %})</div>
 			</div>
 		</li>
 	{% endfor %}
