--- a/site_media/css/default.css
+++ b/site_media/css/default.css
@@ -36,10 +36,24 @@ a:hover {
 }
 
 #header {
-	padding: 5px;
-	font-weight: bold;
-	background: #06c;
-	color: #fff;
+	background: #7c7c7c;
+	height: 34px;
+	border-bottom: 1px dotted #000;
+	color: #aaa;
+	font-family: Arial;
+	font-size: 12px;
+	padding: 0 5px 0 20px;
+	margin-bottom: 10px;
+}
+
+#header #left {
+	float: left;
+	display: block;
+	padding-top: 8px;
+}
+
+#header #right {
+	float: right;
 }
 
 #header a:link, #header a:visited, #header a:active {
