--- a/templates/base.html
+++ b/templates/base.html
@@ -10,15 +10,13 @@
 	<link rel="stylesheet" type="text/css" href="/site_media/css/default.css">
 </head>
 <body>
-	<div id="header" style="margin-bottom: 10px;">
-		<a href="/">Home</a> - 
-		{% if request.user.is_authenticated %}
-		<a href="/logout">Logout</a> - 
-		<a href="/pm/overview">Overview</a>
-		{% else %}
-		<a href="/login">Login</a> - 
-		<a href="/pm/create">Create</a>
-		{% endif %}
+	<div id="header">
+		<div id="left">
+			<a href="/">Home</a> | <a href="http://blog.perplexedlabs.com/">Blog</a> | {% if request.user.is_authenticated %}<a href="/logout">Logout</a> | <a href="/pm/overview">Overview</a>{% else %}<a href="/login">Login</a> | <a href="/pm/create">Create</a>{% endif %}
+		</div>
+		<div id="right">
+			<img src="/site_media/images/plabs_logo.gif" alt="Perplexed Labs, Inc."/>
+		</div>
 	</div>
 	<div id="content">
 		{% block content %}{% endblock %}
