--- a/site_media/css/default.css
+++ b/site_media/css/default.css
@@ -1,6 +1,6 @@
 body {
 	font-size: 62.5%;
-	font-family: Tahoma, sans-serif;
+	font-family: Verdana, Arial, sans-serif;
 	margin: 0 !important;
 	padding: 0 !important;
 	background: #999;
@@ -99,9 +99,7 @@ a:hover {
 }
 
 #projects li {
-	font-size: 1.1em;
-	font-weight: normal;
-	height: 18px;
+	padding-bottom: 4px;
 	clear: both;
 }
 
@@ -111,6 +109,11 @@ a:hover {
 
 .project {
 	margin-bottom: 1em;
+	border-top: 1px solid #888;
+	padding-top: 5px;
+}
+
+.category {
 }
 
 #manage {
@@ -155,7 +158,7 @@ a:hover {
 
 .todos .created {
 	color: #ccc;
-	float: left;
+	float: right;
 }
 
 .todos .control {
@@ -184,11 +187,11 @@ a:hover {
 }
 
 .todos_active .item {
-	width: 560px;
+	width: 530px;
 }
 
 .todos_completed .item {
-	width: 580px;
+	width: 550px;
 }
 
 .todos .placeholder {
