--- a/apps/projman/templates/project_confirm_delete.html
+++ b/apps/projman/templates/project_confirm_delete.html
@@ -3,6 +3,7 @@
 {% block content %}
 <form method="post" action="">
 	<p>Are you sure you want to delete this object?
-	<input type="submit" value="yes">	
+	<input type="hidden" name="post_delete_redirect" value="{{ post_delete_redirect }}"/>
+	<input type="submit" value="yes"/>
 </form>
 {% endblock %}
