--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,9 @@
 	<script type="text/javascript" language="javascript" src="/site_media/js/jquery-ui.min.js"></script>
 	<script type="text/javascript" language="javascript" src="/site_media/js/jquery.editable.js"></script>
 	<script type="text/javascript" language="javascript" src="/site_media/js/default.js"></script>
+	<link rel="stylesheet" type="text/css" href="/site_media/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="/site_media/css/default.css">
+	<link rel="stylesheet" type="text/css" href="/site_media/css/form.css">
 </head>
 <body>
 	<div id="header">
