updated html buttons
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3383 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/apps/projman/templates/addcategory.html
+++ b/apps/projman/templates/addcategory.html
@@ -4,6 +4,6 @@
 		<option value="{{ choice_val }}">{{ choice_label }}</option>
 	{% endfor %}
 	</select><br/>
-	<label for="name">Name:</label> <input type="text" name="{{ category_form.name.name }}" style="width: 225px;"/><br/>
-	<label for="description">Description:</label> <input type="text" name="{{ category_form.description.name }}" style="width: 160px;"/><input type="button" value="Add"/>
+	<label for="name">Name:</label> <input type="text" name="{{ category_form.name.name }}" style="width: 222px;"/><br/>
+	<label for="description">Description:</label> <input type="text" name="{{ category_form.description.name }}" style="width: 142px;"/><button type="button" class="button">Add</button>
 </form>
