--- a/apps/projman/templates/load.html
+++ b/apps/projman/templates/load.html
@@ -1,5 +1,4 @@
 <form enctype="multipart/form-data" method="POST" action="{% url pm_load %}">
-	Load From XML:<br/>
 	{{ load_form.file }}<br/>
-	<input type="submit" value="Submit"/>
+	<button type="button" class="button">Submit</button>
 </form>
