--- a/apps/projman/templates/addproject.html
+++ b/apps/projman/templates/addproject.html
@@ -1,5 +1,5 @@
 <form autocomplete="off">
 	<input type="hidden" name="account" value="{{ account.id }}"/>
-	<label for="name">Name:</label> <input type="text" name="{{ project_form.name.name }}" style="width: 225px;"/><br/>
-	<label for="description">Description:</label> <input type="text" name="{{ project_form.description.name }}" style="width: 160px;"/><input type="button" value="Add"/>
+	<label for="name">Name:</label> <input type="text" name="{{ project_form.name.name }}" style="width: 222px;"/><br/>
+	<label for="description">Description:</label> <input type="text" name="{{ project_form.description.name }}" style="width: 142px;"/><button type="button" class="button">Add</button>
 </form>
