--- a/apps/projman/templates/view.html
+++ b/apps/projman/templates/view.html
@@ -11,14 +11,14 @@
 				{% for project in projects %}
 					<a name="project{{ project.id }}"></a>
 					<div id="project{{ project.id }}" rel="{{ project.id }}" class="project">
-						<h1><a href="{% url pm_delproject project.id %}"><img src="/site_media/images/report_delete.gif" alt="Delete Project"/></a> {{ project.name }}</h1>
-						<div class="projectDescription">{{ project.description }}</div>
+						<h1><a href="{% url pm_delproject project.id %}"><img src="/site_media/images/report_delete.gif" alt="Delete Project"/></a> <span class="projectName" rel="name">{{ project.name }}</span></h1>
+						<div class="projectDescription" rel="description">{{ project.description }}</div>
 						<div class="categories">
 							{% for category in project.category_set.all %}
 								<a name="category{{ category.id }}"></a>
 								<div id="category{{ category.id }}" rel="{{ category.id }}" class="category">
-									<h2><a href="{% url pm_delcategory category.id %}"><img src="/site_media/images/folder_delete.gif" alt="Delete Category"/></a> {{ category.name }}</h2>
-									<div class="categoryDescription">{{ category.description }}</div>
+									<h2><a href="{% url pm_delcategory category.id %}"><img src="/site_media/images/folder_delete.gif" alt="Delete Category"/></a> <span class="categoryName" rel="name">{{ category.name }}</span></h2>
+									<div class="categoryDescription" rel="description">{{ category.description }}</div>
 									<ul class="todos todos_active">
 										{% show_todos category %}
 									</ul>
@@ -49,14 +49,14 @@
 					<div class="addHeader">Load From XML</div>
 					{% include "load.html" %}
 				</div>
-				<div class="categoryLinks">
-					<div class="addHeader">Quick Links</div>
-					<ul>
+				<div class="links">
+					<div class="addHeader">Quick Links / Re-order</div>
+					<ul class="projectLinks" rel="project">
 					{% for project in projects %}
-						<li class="projectLink">{{ project.name }}
-							<ul>
+						<li class="projectLink" rel="{{ project.id }}"><span class="handle"><img src="/site_media/images/list_ordered.gif"/></span> <a href="#project{{ project.id }}">{{ project.name }}</a>
+							<ul class="categoryLinks" rel="category">
 							{% for category in project.category_set.all %}
-								<li class="categoryLink"><a href="#category{{ category.id }}">{{ category.name }}</a></li>
+								<li class="categoryLink" rel="{{ category.id }}"><span class="handle"><img src="/site_media/images/list_ordered.gif"/></span> <a href="#category{{ category.id }}">{{ category.name }}</a></li>
 							{% endfor %}
 							</ul>
 						</li>
