--- a/apps/projman/templates/show_todos.html
+++ b/apps/projman/templates/show_todos.html
@@ -14,7 +14,7 @@
 				</div>
 			</div>
 			<div class="item">{{ todo.item }}</div>
-			<div class="created">({% if todo.complete %}{{ todo.completed|date:"Y-m-d g:ia" }}{% else %}{{ todo.created|date:"Y-m-d g:ia" }}{% endif %})</div>
+			<div class="created">({% if todo.complete %}{{ todo.completed|date:"Y-m-d g:ia" }}{% else %}{{ todo.age.days }} days{% endif %})</div>
 			</div>
 		</li>
 	{% endfor %}
