added ability to re-order categories and projects
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3387 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/apps/projman/templates/addcategory.html
+++ b/apps/projman/templates/addcategory.html
@@ -1,4 +1,5 @@
 <form autocomplete="off">
+	<input type="hidden" name="priority" value=""/>
 	<label for="category">Category:</label> <select name="{{ category_form.project.name }}" style="width: 211px;">
 	{% for choice_val, choice_label in category_form.project.field.choices %}
 		<option value="{{ choice_val }}">{{ choice_label }}</option>
