installed south, re-designed homepage
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3389 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/apps/projman/templates/view.html
+++ b/apps/projman/templates/view.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "content.html" %}
 {% load show_todos %}
 
 {% block title %}View Account - {{ block.super }}{% endblock %}
