--- a/site_media/css/default.css
+++ b/site_media/css/default.css
@@ -3,7 +3,7 @@ body {
 	font-family: Verdana, sans-serif;
 	margin: 0 !important;
 	padding: 0 !important;
-	background: #999;
+	background: #4b4b4b;
 }
 
 h1.accountTitle {
@@ -48,7 +48,6 @@ a:hover {
 	font-family: Arial;
 	font-size: 12px;
 	padding: 0 5px 0 10px;
-	margin-bottom: 10px;
 }
 
 #header #left {
@@ -71,7 +70,7 @@ a:hover {
 
 #content {
 	width: 1080px;
-	margin: 0 auto 10px auto;
+	margin: 10px auto;
 	padding: 10px;
 	background: #fff;
 	border: 1px solid #666;
