--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 	}
 	
 	#centerContainer {
-		width: 1024px;
+		width: 980px;
 		margin: 0 auto;
 	}
 	
@@ -70,7 +70,7 @@
 			<div id="logo"><img src="/site_media/images/logo.gif" alt="TaskLance"/></div>
 			<div id="bigHeader">A Project Manager<br/>That "Just Works."</div>
 			<div id="littleHeader">Web-based project management at it's finest.<br/>Collaborate, delegate, and execute.<br/>Get things done.</div>
-			<div id="register"><img src="/site_media/images/register_button.gif" alt="Register"/></div>
+			<div id="register"><a href="{% url pm_create %}"><img src="/site_media/images/register_button.gif" alt="Register"/></a></div>
 		</div>
 		<div id="middleRight">
 			<img src="/site_media/images/sshots.gif" alt="Screenshots"/>
