--- a/apps/projman/templates/addtodo.html
+++ b/apps/projman/templates/addtodo.html
@@ -1,6 +1,6 @@
 <form autocomplete="off" onkeypress="return onKeyPress_addTodo(event, this);">
 	<input type="hidden" name="category" value=""/>
 	<input type="hidden" name="priority" value=""/>
-	<input type="text" name="{{ todo_form.item.name }}" style="width: 690px;"/>
-	<button type="button" class="button">Add</button>
+	<input type="text" name="{{ todo_form.item.name }}" style="width: 572px;"/>
+	<button type="button" class="button" style="width: 48px;">Add</button>
 </form>
