--- a/apps/projman/templates/view.html
+++ b/apps/projman/templates/view.html
@@ -6,43 +6,37 @@
 {% block content %}
 <table cellspacing="0" id="overviewContainer">
 	<tr>
-		<td valign="top">
-			<div id="account" rel="{{ account.id }}">
+		<td style="vertical-align: top;">
+			<div id="account" rel="{{ request.account.id }}">
 				<div id="projects">
-					{% for project in projects %}
-						<a name="project{{ project.id }}"></a>
-						<div id="project{{ project.id }}" rel="{{ project.id }}" class="project">
-							<h1><a href="{% url pm_delproject project.id %}"><img src="/site_media/images/report_delete.gif" alt="Delete Project"/></a> <span class="projectName" rel="name">{{ project.name }}</span></h1>
-							<div class="projectDescription" rel="description">{{ project.description }}</div>
-							<div class="categories">
-								{% for category in project.category_set.all %}
-									<a name="category{{ category.id }}"></a>
-									<div id="category{{ category.id }}" rel="{{ category.id }}" class="category">
-										<h2><a href="{% url pm_delcategory category.id %}"><img src="/site_media/images/folder_delete.gif" alt="Delete Category"/></a> <span class="categoryName" rel="name">{{ category.name }}</span></h2>
-										<div class="categoryDescription" rel="description">{{ category.description }}</div>
-										<ul class="todos todos_active">
-											{% show_todos category %}
-										</ul>
-										<div class="addTodoContainer">
-											<a href="javascript:;" class="showAddTodoLink">Add Todo</a>
-										</div>
-										<ul class="todos todos_completed">
-											{% show_todos category 1 %}
-										</ul>
+					<a name="project{{ project.id }}"></a>
+					<div id="project{{ project.id }}" rel="{{ project.id }}" class="project">
+						<h1><a href="{% url pm_delproject project.id %}"><img src="/site_media/images/report_delete.gif" alt="Delete Project"/></a> <span class="projectName" rel="name">{{ project.name }}</span></h1>
+						<div class="projectDescription" rel="description">{{ project.description }}</div>
+						<div class="categories">
+							{% for category in project.category_set.all %}
+								<a name="category{{ category.id }}"></a>
+								<div id="category{{ category.id }}" rel="{{ category.id }}" class="category">
+									<h2><a href="{% url pm_delcategory category.id %}"><img src="/site_media/images/folder_delete.gif" alt="Delete Category"/></a> <span class="categoryName" rel="name">{{ category.name }}</span></h2>
+									<div class="categoryDescription" rel="description">{{ category.description }}</div>
+									<ul class="todos todos_active">
+										{% show_todos category %}
+									</ul>
+									<div class="addTodoContainer">
+										<a href="javascript:;" class="showAddTodoLink">Add Todo</a>
 									</div>
-								{% endfor %}
-							</div>
+									<ul class="todos todos_completed">
+										{% show_todos category 1 %}
+									</ul>
+								</div>
+							{% endfor %}
 						</div>
-					{% endfor %}
+					</div>
 				</div>
 			</div>
 		</td>
-		<td valign="top">
+		<td style="vertical-align: top;">
 			<div id="manage">
-				<div class="addProjectContainer">
-					<div class="addHeader">Add Project</div>
-					{% include "addproject.html" %}
-				</div>
 				<div class="addCategoryContainer">
 					<div class="addHeader">Add Category</div>
 					{% include "addcategory.html" %}
@@ -54,7 +48,6 @@
 				<div class="links">
 					<div class="addHeader">Quick Links / Re-order</div>
 					<ul class="projectLinks" rel="project">
-					{% for project in projects %}
 						<li class="projectLink" rel="{{ project.id }}"><span class="handle"><img src="/site_media/images/list_ordered.gif"/></span> <a href="#project{{ project.id }}">{{ project.name }}</a>
 							<ul class="categoryLinks" rel="category">
 							{% for category in project.category_set.all %}
@@ -62,7 +55,6 @@
 							{% endfor %}
 							</ul>
 						</li>
-					{% endfor %}
 					</ul>
 				</div>
 			</div>
