--- a/site_media/css/default.css
+++ b/site_media/css/default.css
@@ -11,6 +11,11 @@ h1.accountTitle {
 	line-height: 1.3em;
 }
 
+h1.projectTitle {
+	font-size: 1.2em;
+	line-height: 1.1em;
+}
+
 body * {
 	margin: 0;
 	padding: 0;
@@ -68,12 +73,24 @@ a:hover {
 	color: #6cf;
 }
 
-#content {
-	width: 1080px;
+#contentContainer {
+	width: 980px;
 	margin: 10px auto;
-	padding: 10px;
+	padding: 0px;
 	background: #fff;
 	border: 1px solid #666;
+}
+
+#banner {
+	padding: 5px;
+	font-weight: bold;
+	font-size: 18px;
+	font-family: Arial;
+	background: #f0f0f0;
+}
+
+#content {
+	padding: 10px;
 }
 
 .accountDescription {
@@ -93,7 +110,7 @@ a:hover {
 	font-size: 2em;
 	font-weight: bold;
 	color: #3179F0;
-	margin-bottom: 2px;
+	margin-bottom: 4px;
 }
 
 #projects h2 {
@@ -109,13 +126,11 @@ a:hover {
 }
 
 #projects {
-	width: 785px;
+	width: 668px;
 }
 
 .project {
 	margin-bottom: 1em;
-	border-top: 2px solid #ddd;
-	padding-top: 2px;
 }
 
 .category {
@@ -192,11 +207,11 @@ a:hover {
 }
 
 .todos_active .item {
-	width: 530px;
+	width: 440px;
 }
 
 .todos_completed .item {
-	width: 550px;
+	width: 440px;
 }
 
 .todos .placeholder {
