--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title>{% block title %}pm{% endblock %}</title>
+	<title>{% block title %}TaskLance - A Project Manager That "Just Works."{% endblock %}</title>
 	<script type="text/javascript" language="javascript" src="/site_media/js/jquery.min.js"></script>
 	<script type="text/javascript" language="javascript" src="/site_media/js/jquery-ui.min.js"></script>
 	<script type="text/javascript" language="javascript" src="/site_media/js/jquery.editable.js"></script>
@@ -14,7 +14,7 @@
 <body>
 	<div id="header">
 		<div id="left">
-			{% if request.account %}{{ request.account.name }}: {% endif %}<a href="/">Home</a> | <a href="http://blog.perplexedlabs.com/">Blog</a> | {% if request.user.is_authenticated %}<a href="/logout">Logout</a> | <a href="/pm/overview">Overview</a>{% else %}<a href="/login">Login</a> | <a href="/pm/create">Register</a>{% endif %}
+			{% if request.account %}<strong>{{ request.account.name }}</strong>: {% endif %}<a href="/">Home</a> | <a href="http://blog.perplexedlabs.com/">Blog</a> | {% if request.user.is_authenticated %}<a href="/logout">Logout</a> | <a href="/pm/overview">Overview</a>{% else %}<a href="/login">Login</a> | <a href="/pm/create">Register</a>{% endif %}
 		</div>
 		<div id="right">
 			<img src="/site_media/images/plabs_logo.gif" alt="Perplexed Labs, Inc."/>
