--- a/templates/content.html
+++ b/templates/content.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
 {% block main %}
-<div id="content">
-	{% block content %}{% endblock %}
+<div id="contentContainer">
+	<div id="banner">
+		{{ request.account.name}}: {{ request.account.description }}
+	</div>
+	<div id="content">
+		{% block content %}{% endblock %}
+	</div>
 </div>
 {% endblock %}
