--- a/apps/projman/templates/create.html
+++ b/apps/projman/templates/create.html
@@ -1,12 +1,32 @@
 {% extends "content.html" %}
 
-{% block title %}Create Account - {{ block.super }}{% endblock %}
+{% block title %}Register - {{ block.super }}{% endblock %}
 
 {% block content %}
-Register:
 <form method="POST" action="{% url pm_create %}">
-	{{ usercreation_form.as_p }}
-	{{ account_form.as_p }}
-	<input type="submit" value="Register">
+	<fieldset>
+		<legend>Register</legend>
+		<div>
+			<label for="id_user-username">Username:</label> <input type="text" maxlength="30" name="user-username" id="id_user-username" class="text"/>
+		</div>
+		<div>
+			<label for="id_user-password1">Password:</label> <input type="password" id="id_user-password1" name="user-password1" class="password"/>
+		</div>
+		<div>
+			<label for="id_user-password2">Confirm:</label> <input type="password" id="id_user-password2" name="user-password2" class="password"/>
+		</div>
+		<div>
+			<label for="id_acct-name">Name:</label> <input type="text" maxlength="255" name="acct-name" id="id_acct-name" class="text"/>
+		</div>
+		<div>
+			<label for="id_acct-description">Description:</label> <input type="text" maxlength="255" name="acct-description" id="id_acct-description" class="text"/>
+		</div>
+		<div>
+			<label for="id_acct-subdomain">Subdomain:</label> <input type="text" maxlength="25" name="acct-subdomain" id="id_acct-subdomain" class="text"/>
+		</div>
+		<div class="submit">
+			<input type="submit" value="Register">
+		</div>
+	</fieldset>
 </form>
 {% endblock %}
