--- a/apps/projman/templates/view.html
+++ b/apps/projman/templates/view.html
@@ -1,5 +1,5 @@
 {% extends "content.html" %}
-{% load show_todos %}
+{% load custom_tags %}
 
 {% block title %}View Account - {{ block.super }}{% endblock %}
 
